Fixing some spacing issues

--- a/src/styles/_widgets.scss
+++ b/src/styles/_widgets.scss
@@ -6,13 +6,13 @@
   margin-top: 0;
 }
 
+.below-post {
+  margin-top: 2.5rem;
+}
+
 .widget {
     padding-top: 0;
     padding-bottom: 2.5rem;
-}
-
-.widget:last-child {
-  padding-bottom: 0;
 }
 
 .widget-title {
